Update Player Controller Script

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ tiled/untitled.tiled-session
 tiled/untitled.tiled-session
 tiled/untitled.tiled-session
 tiled/untitled.tiled-session
+tiled/untitled.tiled-session
